[tool.poetry]
name = "dolark"
version = "0.0.1"
description = "Dolo meets ARK"
authors = ["Winant Pablo <pablo.winant@gmail.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.7"
dolo = "^0.4.9.13"
dolang = "^0.0.12"
numpy = "^1.19.1"
tqdm = "^4.48.2"
scipy = "^1.5.2"
"ruamel.yaml" = "^0.16.10"
jupyterlab = "^2.2.6"
ipython = "^7.17.0"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.1"
pymdown-extensions = "^7.1"
python-markdown-math = "^0.6"
mypy = "^0.782"
coverage = "^5.3"
pytest-cov = "^2.10.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
