[tool.poetry]
name = "dolark"
version = "0.0.1"
description = "Dolo meets ARK"
authors = ["Winant Pablo <pablo.winant@gmail.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
dolo =  { git = "https://github.com/EconForge/dolo.py@v0.4.9.18" }
dolang =  { git = "https://github.com/EconForge/dolang.py@v0.0.18" }
numpy = "^1.19.1"
tqdm = "^4.48.2"
scipy = "^1.4.1"
ipython = "^8.5.0"
jupyterlab = "^3.0.0"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.1"
pymdown-extensions = "^7.1"
python-markdown-math = "^0.6"
mypy = "^0.782"
coverage = "^5.3"
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
